<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <TextView
        android:id="@+id/hr"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="25dp"
        android:text="@string/hr"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/interviewer"
        android:layout_marginTop="50dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="25dp"
        android:layout_below="@+id/hr"
        android:text="@string/interviewer"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/mangement"
        android:layout_marginTop="50dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="25dp"
        android:layout_below="@+id/interviewer"
        android:text="@string/management"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>
    <!-- <TextView
         android:layout_below="@id/label"
         android:layout_centerInParent="true"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="12dp"
         android:layout_marginTop="10dp"
         android:gravity="center_horizontal"
         android:text="Edit fragment_connect.xml to change the appearance"
         android:id="@+id/textView2" />

 -->


</RelativeLayout>